unpackaged/main/default/objects/Lead/fields/IL_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>IL_Assigned_Date__c</fullName>
    <description>This field will capture the date and time that an internet lead was assigned to a sales rep.</description>
    <inlineHelpText>This field will capture the date and time that an internet lead was assigned to a sales rep.</inlineHelpText>
    <label>IL - Assigned Date</label>
    <type>DateTime</type>
</CustomField>