unpackaged/main/default/objects/Lead/fields/IL_Hours_to_Sales_Response_Raw__c.field-meta.xml
<CustomField>
    <fullName>IL_Hours_to_Sales_Response_Raw__c</fullName>
    <description>This field will show the raw time between the internet response date and the first touch by sales.</description>
    <formula>IF(
ISBLANK(IL_1st_Sales_Touch__c), 
(((NOW()-Internet_Response_Date__c) * 1440) / 60),
(((IL_1st_Sales_Touch__c - Internet_Response_Date__c) * 1440) / 60))</formula>
    <inlineHelpText>This field will show the raw time between the internet response date and the first touch by sales.</inlineHelpText>
    <label>IL - Hours to Sales Response (Raw)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>