unpackaged/main/default/objects/Lead/fields/IL_Hrs_to_Sales_Response_Assigned_BH__c.field-meta.xml
<CustomField>
    <fullName>IL_Hrs_to_Sales_Response_Assigned_BH__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IL - Hrs to Sales Response (Assigned BH)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>