unpackaged/main/default/objects/Lead/fields/Initial_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Initial_Lead_Source__c</fullName>
    <description>This field will be a record of what type of campaign a customer responded to first.</description>
    <inlineHelpText>This field will be a record of what type of campaign a customer responded to first. 
***Do Not Change***</inlineHelpText>
    <label>Initial Lead Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>