unpackaged/main/default/objects/Lead/fields/Initial_Marketing_Contact_Sent__c.field-meta.xml
<CustomField>
    <fullName>Initial_Marketing_Contact_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is set to true if the marketing DLP email and text are sent out. It is being updated by the Notifications - Custom Partner Email and Text Notification flow.</description>
    <label>Initial Marketing Contact Sent</label>
    <type>Checkbox</type>
</CustomField>