unpackaged/main/default/objects/Lead/fields/Initial_Response_Rep__c.field-meta.xml
<CustomField>
    <fullName>Initial_Response_Rep__c</fullName>
    <description>This field will capture the rep that took the initial call from the customer.  This field will be updated by workflow.</description>
    <inlineHelpText>This field will capture the rep that took the initial call from the customer.  This field will be updated by workflow.</inlineHelpText>
    <label>Initial Response Rep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>