unpackaged/main/default/objects/Lead/fields/Initial_Response_User__c.field-meta.xml
<CustomField>
    <fullName>Initial_Response_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will capture the user that initially worked with the customer.</description>
    <inlineHelpText>This field will capture the user that initially worked with the customer.</inlineHelpText>
    <label>Initial Response User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>