unpackaged/main/default/objects/Lead/fields/Internet_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Internet_Response_Date__c</fullName>
    <description>This field will capture the date in which the customer responded via an internet application or landing page.</description>
    <inlineHelpText>This field will capture the date in which the customer responded via an internet application or landing page.</inlineHelpText>
    <label>Internet Response Date</label>
    <type>DateTime</type>
</CustomField>