unpackaged/main/default/objects/Lead/fields/Internet_Response_Date_Day__c.field-meta.xml
<CustomField>
    <fullName>Internet_Response_Date_Day__c</fullName>
    <formula>CASE(
MOD(DATEVALUE(Internet_Response_Date__c)- DATE(1900, 1, 7), 7), 
0, "Sunday", 
1, "Monday", 
2, "Tuesday", 
3, "Wednesday", 
4, "Thursday", 
5, "Friday", 
6, "Saturday", "Error")</formula>
    <label>Internet Response Date Day</label>
    <type>Text</type>
</CustomField>