unpackaged/main/default/objects/Lead/fields/Internet_Workflows__c.field-meta.xml
<CustomField>
    <fullName>Internet_Workflows__c</fullName>
    <label>Internet Workflows</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>To Be Processed - New</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>To Be Processed - Merged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>