unpackaged/main/default/objects/Lead/fields/Invalid_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Phone_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will capture if a phone number is invalid.</description>
    <inlineHelpText>Check the box if the phone number is invalid.</inlineHelpText>
    <label>Invalid Phone Number</label>
    <type>Checkbox</type>
</CustomField>