unpackaged/main/default/objects/Lead/fields/IUSA_Number__c.field-meta.xml
<CustomField>
    <fullName>IUSA_Number__c</fullName>
    <description>This field is the IUSA Number that Info USA uses as a unique identifier for records in their database.</description>
    <inlineHelpText>This field is the IUSA Number that Info USA uses as a unique identifier for records in their database.</inlineHelpText>
    <label>IUSA Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>