unpackaged/main/default/objects/Lead/fields/Key_Code__c.field-meta.xml
<CustomField>
    <fullName>Key_Code__c</fullName>
    <description>A Code returned from ceertain lead web sites</description>
    <inlineHelpText>A Code returned from ceertain lead web sites</inlineHelpText>
    <label>Key Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>