unpackaged/main/default/objects/Lead/fields/Last_Call_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Disposition__c</fullName>
    <description>What was the disposition the last time we called the Account?</description>
    <label>Last Call Disposition</label>
    <length>40</length>
    <type>Text</type>
</CustomField>