unpackaged/main/default/objects/Lead/fields/Last_Campaign_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Campaign_Response_Date__c</fullName>
    <description>This field will indicate when the last response to a campaign occurred.</description>
    <inlineHelpText>This field will indicate when the last response to a campaign occurred.</inlineHelpText>
    <label>Last Campaign Response Date</label>
    <type>Date</type>
</CustomField>