unpackaged/main/default/objects/Lead/fields/Last_Card_Search_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Card_Search_Date__c</fullName>
    <description>This field will capture the date of the last time a card search was performed on a record.</description>
    <inlineHelpText>This field will capture the date of the last time a card search was performed on a record.</inlineHelpText>
    <label>Last Card Search Date</label>
    <type>Date</type>
</CustomField>