unpackaged/main/default/objects/Lead/fields/LE_Credit_Risk_Parameters__c.field-meta.xml
<CustomField>
    <fullName>LE_Credit_Risk_Parameters__c</fullName>
    <description>Created to capture scores from Lattice models.</description>
    <label>LE Credit Risk Parameters</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>