unpackaged/main/default/objects/Lead/fields/LE_Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>LE_Number_of_Employees__c</fullName>
    <description>Created to capture scores from Lattice models.</description>
    <label>LE Number of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>