unpackaged/main/default/objects/Lead/fields/LeadID18__c.field-meta.xml
<CustomField>
    <fullName>LeadID18__c</fullName>
    <description>External Lead ID required when working from external programs with the Salesforce database</description>
    <inlineHelpText>External Lead ID required when working from external programs with the Salesforce database</inlineHelpText>
    <label>LeadID18</label>
    <length>18</length>
    <type>Text</type>
</CustomField>