unpackaged/main/default/objects/Lead/fields/Lease_Propensity_Score__c.field-meta.xml
<CustomField>
    <fullName>Lease_Propensity_Score__c</fullName>
    <description>This field will indicate the D&amp;B's rating of a lead to complete a lease transaction.</description>
    <label>Lease Propensity Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>