unpackaged/main/default/objects/Lead/fields/Lending_Tree_Id__c.field-meta.xml
<CustomField>
    <fullName>Lending_Tree_Id__c</fullName>
    <description>Lending Tree Id for reporting.</description>
    <label>Lending Tree Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>