unpackaged/main/default/objects/Lead/fields/Live_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Live_Transfer__c</fullName>
    <description>This field is designed to be placed on a partner's web to lead form.  This field will indicate if the lead was live transferred over the phone.</description>
    <inlineHelpText>This field is designed to be placed on a partner's web to lead form.  This field will indicate if the lead was live transferred over the phone.</inlineHelpText>
    <label>Live Transfer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>