unpackaged/main/default/objects/Lead/fields/Marketing_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is updated via sync from Marketing Cloud</description>
    <inlineHelpText>Updated via Marketing Cloud Integration</inlineHelpText>
    <label>NF Marketing Opt-Out</label>
    <type>Checkbox</type>
</CustomField>