unpackaged/main/default/objects/Lead/fields/Marketing_Pilot_Results__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Pilot_Results__c</fullName>
    <description>Will be used to track future Marketing efforts</description>
    <label>Marketing Pilot Results</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>