unpackaged/main/default/objects/Lead/fields/Marketing_Prescreen_Score__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Prescreen_Score__c</fullName>
    <label>Marketing Prescreen Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Unclassified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>