unpackaged/main/default/objects/Lead/fields/Marketing_Response_Driver__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Response_Driver__c</fullName>
    <description>This will track the driving force that led to the customer ending up on www.fivepointcapital.com and filling out an application.</description>
    <inlineHelpText>This will track the driving force that led to the customer ending up on www.fivepointcapital.com and filling out an application.</inlineHelpText>
    <label>Marketing Response Driver</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Internet Search</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>