unpackaged/main/default/objects/Lead/fields/Marketing_Scrub_Comments__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Scrub_Comments__c</fullName>
    <description>This field will be used by the rep to enter comments and more info about the need for a marketing scrub.</description>
    <inlineHelpText>Type in any additional information known about why a marketing scrub is needed.</inlineHelpText>
    <label>Marketing Scrub Comments</label>
    <type>TextArea</type>
</CustomField>