unpackaged/main/default/objects/Lead/fields/Marketo_Cookie_Id__c.field-meta.xml
<CustomField>
    <fullName>Marketo_Cookie_Id__c</fullName>
    <description>This field will be used in conjunction with the marketo lead process. This will cookie will be used to link up an anonymous lead in marketo with SF / Marketo lead.</description>
    <inlineHelpText>This field will be used in the Marketo process to link web activity to a SF lead.</inlineHelpText>
    <label>Marketo Cookie Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>