unpackaged/main/default/objects/Lead/fields/MCA_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>MCA_Rep_Email__c</fullName>
    <label>MCA Rep Email</label>
    <type>Email</type>
</CustomField>