unpackaged/main/default/objects/Lead/fields/Merchant_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Status_Reason__c</fullName>
    <label>Merchant Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status_MCA__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Fake Lead</fullName>
            </value>
            <value>
                <fullName>Customer Requested No Contact</fullName>
            </value>
            <value>
                <fullName>Out of Business</fullName>
            </value>
            <value>
                <fullName>Low AGS</fullName>
            </value>
            <value>
                <fullName>Not a business</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>