unpackaged/main/default/objects/Lead/fields/MobilePhone_Trim__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone_Trim__c</fullName>
    <externalId>true</externalId>
    <label>MobilePhone Trim</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>