unpackaged/main/default/objects/Lead/fields/Model_Grade__c.field-meta.xml
<CustomField>
    <fullName>Model_Grade__c</fullName>
    <description>Displays PreQual Grade for sorting on Lead List Views.</description>
    <formula>IF(
				AND(
								ISPICKVAL(Principal_Consumer_Risk_Summary__r.Model_Status__c, "Expired"),
								NOT(ISPICKVAL(Principal_Consumer_Risk_Summary__r.Model_Status__c, ""))
				),
				Principal_Consumer_Risk_Summary__r.Grade__c + " - Expired",
				Principal_Consumer_Risk_Summary__r.Grade__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Model Grade</label>
    <type>Text</type>
</CustomField>