unpackaged/main/default/objects/Lead/fields/MSA_Code__c.field-meta.xml
<CustomField>
    <fullName>MSA_Code__c</fullName>
    <description>The Metropolitian Service Area (MSA) Code that this lead resides in.</description>
    <inlineHelpText>The Metropolitian Service Area (MSA) Code that this lead resides in.</inlineHelpText>
    <label>MSA Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>