unpackaged/main/default/objects/Lead/fields/MSA_Name__c.field-meta.xml
<CustomField>
    <fullName>MSA_Name__c</fullName>
    <description>The Metropolitian Service Area (MSA) Name that this lead resides in.</description>
    <inlineHelpText>The Metropolitian Service Area (MSA) Name that this lead resides in.</inlineHelpText>
    <label>MSA Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>