unpackaged/main/default/objects/Lead/fields/National_Funding_WebId__c.field-meta.xml
<CustomField>
    <fullName>National_Funding_WebId__c</fullName>
    <displayFormat>NFS-{000000}</displayFormat>
    <externalId>true</externalId>
    <label>National Funding WebId</label>
    <type>AutoNumber</type>
</CustomField>