unpackaged/main/default/objects/Lead/fields/NCOA_Fail__c.field-meta.xml
<CustomField>
    <fullName>NCOA_Fail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will indicate if an address fails the NCOA check.</description>
    <inlineHelpText>This field will indicate if an address fails the NCOA check.</inlineHelpText>
    <label>NCOA Fail</label>
    <type>Checkbox</type>
</CustomField>