unpackaged/main/default/objects/Lead/fields/Newsletter_Requested__c.field-meta.xml
<CustomField>
    <fullName>Newsletter_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer requests the newsletter via the website.</description>
    <inlineHelpText>Customer requests the newsletter via the website.</inlineHelpText>
    <label>Newsletter Requested</label>
    <type>Checkbox</type>
</CustomField>