unpackaged/main/default/objects/Lead/fields/Out_Of_Business__c.field-meta.xml
<CustomField>
    <fullName>Out_Of_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if this lead is Out Of Business</description>
    <inlineHelpText>Check this box if this lead is Out Of Business</inlineHelpText>
    <label>Out Of Business</label>
    <type>Checkbox</type>
</CustomField>