unpackaged/main/default/objects/Lead/fields/Ownership_Changed_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Changed_Last_30_Days__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will indicate if the ownership of the record has changed in the last 30 days.</description>
    <inlineHelpText>This field will indicate if the ownership of the record has changed in the last 30 days.</inlineHelpText>
    <label>Ownership Changed Last 30 Days</label>
    <type>Checkbox</type>
</CustomField>