unpackaged/main/default/objects/Lead/fields/Ownership_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Percentage__c</fullName>
    <description>The customers ownership percentage in the business</description>
    <inlineHelpText>Enter the customer's ownership percentage in the business.</inlineHelpText>
    <label>Ownership Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>