unpackaged/main/default/objects/Lead/fields/Owns_Rents1__c.field-meta.xml
<CustomField>
    <fullName>Owns_Rents1__c</fullName>
    <description>Customer owns or rents the facility - Status</description>
    <inlineHelpText>Indicate if the customer owns or rents the facility.</inlineHelpText>
    <label>Owns / Rents</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rents</fullName>
            </value>
            <value>
                <fullName>Owns</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>