unpackaged/main/default/objects/Lead/fields/Past_Rep__c.field-meta.xml
<CustomField>
    <fullName>Past_Rep__c</fullName>
    <description>This field will indicate the past rep that the lead was owned by.</description>
    <label>Past Rep</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>John McKenzie</fullName>
            </value>
            <value>
                <fullName>Brent Park</fullName>
            </value>
            <value>
                <fullName>Francisco Alvardo</fullName>
            </value>
            <value>
                <fullName>Kyle Hanson</fullName>
            </value>
            <value>
                <fullName>Phil Netro</fullName>
            </value>
            <value>
                <fullName>Chad DeGange</fullName>
            </value>
            <value>
                <fullName>Brian Halso</fullName>
            </value>
            <value>
                <fullName>Ryan Freitas</fullName>
            </value>
            <value>
                <fullName>Low Credit Queue</fullName>
            </value>
            <value>
                <fullName>Christopher Roman</fullName>
            </value>
            <value>
                <fullName>Andrea Seals</fullName>
            </value>
            <value>
                <fullName>Low AGS Queue</fullName>
            </value>
            <value>
                <fullName>Jordan Keezell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>